# seidr

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  Dockerfile.bioconda  README.md  format.sh
.circleci/: config.yml
CMakeModules/: FindCLP.cmake  FindGLPK.cmake  FindHTSLIB.cmake  FindTBB.cmake
R/SeidRFile/: DESCRIPTION  NAMESPACE
R/SeidRFile/R/: RcppExports.R  SeidrFile.R
R/SeidRFile/inst/include/: SeidRFile.h
R/SeidRFile/man/: SeidrFile-class.Rd  SeidrFileFromPath.Rd  algorithms-SeidrFile-method.Rd  apply_dummy.Rd  apply_functions.Rd  centr_dummy.Rd  centrality_accessors.Rd  chunk_dummy.Rd  close-SeidrFile-method.Rd  get_chunk.Rd  nodes-SeidrFile-method.Rd  reset-SeidrFile-method.Rd  show-SeidrFile-method.Rd  supplementary-SeidrFile-method.Rd
R/SeidRFile/src/: Makevars  RcppExports.cpp  Serialize.cpp  rcpp_hello.cpp
conda/: build.sh  conda_build_config.yaml  meta.yaml
docker/: Dockerfile  cloudbuild.yaml
docs/: Makefile  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: seidrfile.rst
docs/source/aggregate/: aggregate.rst
docs/source/algorithms/: anoverence.rst  aracne.rst  clr.rst  correlation.rst  ensemble.rst  genie3.rst  narromi.rst  pcor.rst  plsnet.rst  tigress.rst  tomsimilarity.rst
docs/source/backbone/: backbone.rst
docs/source/building/: building.rst  install.rst
docs/source/compare/: compare.rst
docs/source/getting_started/: getting_started.rst
docs/source/import/: import.rst
docs/source/mpi/: mpi.rst
docs/source/nextflow/: nextflow.rst
docs/source/paradigm/: paradigm.rst
docs/source/references/: references.rst
docs/source/seidrfile/: seidrfile.rst
docs/source/stats/: stats.rst
docs/source/threshold/: threshold.rst
nextflow/: nextflow.config  vala.nf
python/SeidrFile/: CMakeLists.txt  example.py
python/SeidrFile/SeidrFile/: SeidrFile.py  __init__.py
python/SeidrFile/src/: wrapper.cpp  wrapper.h
scripts/: README.md  athal_gold_standard_generation.R  dmel_gold_standard_generation.R  dna.py  generate_import_script.py  hsa_gold_standard_generation.R  scere_gold_standard_generation.R
src/Anoverence/: anova-fun.cpp  anova-fun.h  anoverence.cpp
src/Common/: BSlogger.cpp  BSlogger.h  common.cpp  common.h  cp_resume.h  ensembles.h  fs.cpp  fs.h  lower_triangular.h  mpi_dummy.cpp  mpi_dummy.h  mpims.cpp  mpims.h  mpiomp.cpp  mpiomp.h  parallel_control.cpp  parallel_control.h  tclap_format.h
src/Correlation/: cor_fun.cpp  cor_fun.h  correlation.cpp
src/ElNet/: el-ensemble.cpp  elnet-fun.cpp  elnet-fun.h  glmnetx.cpp  glmnetx.h
src/GENIE3/: genie3-fun.cpp  genie3-fun.h  genie3.cpp
src/MI/: mi.cpp  mi_fun.cpp  mi_fun.h
src/Narromi/: IP_LPT.cpp  IP_LPT.h  IP_LPT2.cpp  IP_LPT2.h  narromi.cpp  narromi_fun.cpp  narromi_fun.h  stats_fun.cpp  stats_fun.h
src/PCor/: Makefile  pcor  pcor-fun.cpp  pcor-fun.h  pcor.cpp
src/PLSNET/: plsnet-fun.cpp  plsnet-fun.h  plsnet.cpp
src/Pred/: Makefile  pred-fun.cpp  pred-fun.h  pred.cpp
src/SVM/: linear-ensemble.cpp  linear-fun.cpp  linear-fun.h  svm-ensemble.cpp  svm-fun.cpp  svm-fun.h
src/Seidr/: RankFile.h  Serialize.cpp  Serialize.h  SpNet.h  adjacency.cpp  adjacency.h  aggregate.cpp  aggregate.h  asp.cpp  asp.h  backbone.cpp  backbone.h  compare.cpp  compare.h  compare_clusters.cpp  compare_clusters.h  convert.cpp  convert.h  describe.cpp  describe.h  dna.cpp  dna.h  graphstats.cpp  graphstats.h  import.cpp  import.h  index.cpp  index.h  neighbours.cpp  neighbours.h  node2vec.cpp  node2vec.h  reheader.cpp  reheader.h  resolve.cpp  resolve.h  roc.cpp  roc.h  sample.cpp  sample.h  (+13 more)
src/TOMSimilarity/: tom_fun.cpp  tom_fun.h  tomsimilarity.cpp
src/Tigress/: glmnet2.cpp  glmnet2.h  tiglm.cpp  tiglm.h  tigress.cpp
